images are being processed!

--- a/haskell-app/haskell-app.cabal
+++ b/haskell-app/haskell-app.cabal
@@ -48,13 +48,16 @@ executable haskell-app-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
+    , directory
     , haskell-app
     , http-client
     , mime-types
     , process
     , text
+    , wai-cors
     , yesod
   default-language: Haskell2010
 
