--- a/haskell-app/package.yaml
+++ b/haskell-app/package.yaml
@@ -53,6 +53,9 @@ executables:
     - text
     - http-client
     - mime-types
+    - aeson
+    - directory
+    - wai-cors
 
 tests:
   haskell-app-test:
