--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "rgb-hex": "^4.1.0",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
