--- a/haskell-app/haskell-app.cabal
+++ b/haskell-app/haskell-app.cabal
@@ -48,16 +48,15 @@ executable haskell-app-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
     , directory
     , haskell-app
     , http-client
+    , json
     , mime-types
     , process
     , text
-    , wai-cors
     , yesod
   default-language: Haskell2010
 
